// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render properly with default props and match snapshot 1`] = `
<DocumentFragment>
  <span
    class="mocked-styled-0 el-avatar"
    data-colour="default"
    data-shape="circle"
    data-size="medium"
    role="presentation"
  >
    Default Avatar
  </span>
</DocumentFragment>
`;

exports[`Avatar > should render properly with specified props and match snapshot 1`] = `
<DocumentFragment>
  <span
    class="mocked-styled-0 el-avatar"
    data-colour="primary"
    data-shape="square"
    data-size="small"
    role="presentation"
  >
    Square Avatar
  </span>
</DocumentFragment>
`;
